update to appController methods instead of Mongo repo and add the update and delete methods in appController